--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,10 +2,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: bs-test-service
-  links:
-    - url: https://github.com/hoyon/bs-test-service
-      title: Github
-      icon: github
+  annotations:
+    github.com/project-slug: hoyon/bs-test-service
 spec:
   type: service
   lifecycle: experimental
